force-app/main/default/objects/Product2/fields/ActivateOrder_OverrideBillingDateIsToday__c.field-meta.xml
<CustomField>
    <fullName>ActivateOrder_OverrideBillingDateIsToday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activate the order when the Override Next Billing Date is equal to Today</description>
    <inlineHelpText>Activate the order when the Override Next Billing Date is equal to Today</inlineHelpText>
    <label>ActivateOrder OverrideBillingDateIsToday</label>
    <type>Checkbox</type>
</CustomField>