force-app/main/default/objects/Product2/fields/Available_for_Order_Split__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Order_Split__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Separate Order will be created for the product</description>
    <label>Available for Order Split</label>
    <type>Checkbox</type>
</CustomField>