force-app/main/default/objects/Product2/fields/Booth_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Booth_Product_Type__c</fullName>
    <description>Type of booth product (e.g. Space, Shell Scheme etc.)</description>
    <label>Booth Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Booth_Product_Type</valueSetName>
    </valueSet>
</CustomField>