force-app/main/default/objects/Product2/fields/Booth_Type__c.field-meta.xml
<CustomField>
    <fullName>Booth_Type__c</fullName>
    <description>Type of booth (e.g. Island, Inline etc.)</description>
    <label>Booth Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Indoor</fullName>
            </value>
            <value>
                <fullName>Outdoor</fullName>
            </value>
            <value>
                <fullName>Corner</fullName>
            </value>
            <value>
                <fullName>Island</fullName>
            </value>
            <value>
                <fullName>Inline</fullName>
            </value>
            <value>
                <fullName>Peninsula</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>