force-app/main/default/objects/Product2/fields/Description_in_Alt_Language__c.field-meta.xml
<CustomField>
    <fullName>Description_in_Alt_Language__c</fullName>
    <description>Product Description in alternate language.</description>
    <label>Description in Alt Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>