force-app/main/default/objects/Product2/fields/Event_Ops_Category__c.field-meta.xml
<CustomField>
    <fullName>Event_Ops_Category__c</fullName>
    <description>Event Ops Category</description>
    <label>Event Ops Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activities</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Exhibit Hall</fullName>
            </value>
            <value>
                <fullName>Reg Area</fullName>
            </value>
            <value>
                <fullName>Rooms</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>