force-app/main/default/objects/Product2/fields/Event_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Product_Type__c</fullName>
    <description>Type of product (e.g. Booth, Digital etc.)</description>
    <label>Event Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Booth</fullName>
            </value>
            <value>
                <fullName>Booth Cancellation</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Merchandize</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Publishing</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Commissions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>