force-app/main/default/objects/Product2/fields/Event_Product_Type_Filter__c.field-meta.xml
<CustomField>
    <fullName>Event_Product_Type_Filter__c</fullName>
    <description>Type of product (e.g. Booth, Digital etc.)</description>
    <formula>TEXT(Event_Product_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Product Type Filter</label>
    <type>Text</type>
</CustomField>