force-app/main/default/objects/Product2/fields/FamilyOfProduct__c.field-meta.xml
<CustomField>
    <fullName>FamilyOfProduct__c</fullName>
    <description>Family of Product.</description>
    <formula>text( Family )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FamilyOfProduct</label>
    <type>Text</type>
</CustomField>