force-app/main/default/objects/Product2/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <description>General Ledger code for accounting</description>
    <inlineHelpText>General Ledger code for accounting</inlineHelpText>
    <label>GL Code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>