force-app/main/default/objects/Product2/fields/Group_By_PRule__c.field-meta.xml
<CustomField>
    <fullName>Group_By_PRule__c</fullName>
    <description>Used for Price / Product Rules, to define certain groups of products.</description>
    <inlineHelpText>Used for Price / Product Rules, to define certain groups of products.</inlineHelpText>
    <label>Group By PRule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRule001</fullName>
            </value>
            <value>
                <fullName>PRule002</fullName>
            </value>
            <value>
                <fullName>PRule003</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>