force-app/main/default/objects/Product2/fields/IM_ProductCode__c.field-meta.xml
<CustomField>
    <fullName>IM_ProductCode__c</fullName>
    <description>Informa Markets product code.</description>
    <displayFormat>IM-{00000}</displayFormat>
    <label>IM ProductCode</label>
    <type>AutoNumber</type>
</CustomField>