force-app/main/default/objects/Product2/fields/Invoice_Line_Item_Description_Format__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_Item_Description_Format__c</fullName>
    <description>format which will be used to generate description for product on order, Invoice and Credit note.</description>
    <label>Invoice Line Item Description Format</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>