force-app/main/default/objects/Product2/fields/IOM_Do_not_send_for_Billing__c.field-meta.xml
<CustomField>
    <fullName>IOM_Do_not_send_for_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Don&apos;t include the product for IOM Billing</description>
    <label>IOM Do not send for Billing</label>
    <type>Checkbox</type>
</CustomField>