force-app/main/default/objects/Product2/fields/IOM_ERP_Hidden_when__c.field-meta.xml
<CustomField>
    <fullName>IOM_ERP_Hidden_when__c</fullName>
    <description>Hide PDF in ERP when the product acts as a Parent, Child, or Stand Alone</description>
    <label>IOM ERP Hidden when</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Stand Alone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>