force-app/main/default/objects/Product2/fields/IOM_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>IOM_Product_Code__c</fullName>
    <formula>IF(
  ISBLANK(IOM_ProductCode_Text__c),
  (
    $CustomMetadata.IOM_Global_Configuration_Data__mdt.IOM_Product_Code_Prefix.IOM_Value__c + &quot;-&quot; +
    IF(
      CONTAINS(IOM_ProductCode__c, &quot;-&quot;), 
      REVERSE(LEFT(REVERSE(IOM_ProductCode__c),(Find(&quot;-&quot;,REVERSE(IOM_ProductCode__c))-1))),
      IOM_ProductCode__c
    )
  ),
  IOM_ProductCode_Text__c
)</formula>
    <label>IOM Product Code</label>
    <type>Text</type>
</CustomField>