force-app/main/default/objects/Product2/fields/IOM_ProductCode__c.field-meta.xml
<CustomField>
    <fullName>IOM_ProductCode__c</fullName>
    <description>This field is used to hold the product code from the order hub.</description>
    <displayFormat>P-{00000}</displayFormat>
    <label>IOM Product Number</label>
    <type>AutoNumber</type>
</CustomField>