force-app/main/default/objects/Product2/fields/IOM_ProductCode_Text__c.field-meta.xml
<CustomField>
    <fullName>IOM_ProductCode_Text__c</fullName>
    <description>This field is used to override IOM_ProductCode__c on Product2.</description>
    <label>IOM ProductCode Text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>