force-app/main/default/objects/Product2/fields/IOM_Tobe_Hidden_in_ERP__c.field-meta.xml
<CustomField>
    <fullName>IOM_Tobe_Hidden_in_ERP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide the Product in Invoice PDF from ERP</description>
    <label>IOM Tobe Hidden in ERP</label>
    <type>Checkbox</type>
</CustomField>