force-app/main/default/objects/Product2/fields/Name_in_Alt_Language__c.field-meta.xml
<CustomField>
    <fullName>Name_in_Alt_Language__c</fullName>
    <description>Product Name in alternate language.</description>
    <label>Name in Alt Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>