force-app/main/default/objects/Product2/fields/Oracle_Material_Code__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Material_Code__c</fullName>
    <description>Unique General Ledger Revenue Reference</description>
    <label>Oracle Material Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>