force-app/main/default/objects/Product2/fields/Oracle_Material_Code_Contra__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Material_Code_Contra__c</fullName>
    <description>Unique General Ledger Revenue Reference - Contra</description>
    <label>Oracle Material Code - Contra</label>
    <length>100</length>
    <type>Text</type>
</CustomField>