force-app/main/default/objects/Product2/fields/Oracle_Sync__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Product synced from oracle.</description>
    <label>Oracle Sync</label>
    <type>Checkbox</type>
</CustomField>