force-app/main/default/objects/Product2/fields/QuantityUnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>QuantityUnitOfMeasure__c</fullName>
    <formula>TEXT( QuantityUnitOfMeasure )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuantityUnitOfMeasure</label>
    <type>Text</type>
</CustomField>