force-app/main/default/objects/Product2/fields/Revenue_Recognition_End_Date_Rule__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Recognition_End_Date_Rule__c</fullName>
    <description>Metadata Rule to identify the data points to be used determine the Revenue End Date for a Invoice Transaction Line</description>
    <label>Revenue Recognition End Date Rule</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>