force-app/main/default/objects/Product2/fields/SAC_Code__c.field-meta.xml
<CustomField>
    <fullName>SAC_Code__c</fullName>
    <description>Services Accounting Code</description>
    <label>SAC Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>