force-app/main/default/objects/Product2/fields/SAP_Material_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Material_Code__c</fullName>
    <description>SAP Material Code</description>
    <label>SAP Material Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>