force-app/main/default/objects/Product2/fields/SAP_Material_Code_Contra__c.field-meta.xml
<CustomField>
    <fullName>SAP_Material_Code_Contra__c</fullName>
    <description>Unique General Ledger Revenue Reference - Contra</description>
    <label>SAP Material Code - Contra</label>
    <length>100</length>
    <type>Text</type>
</CustomField>