force-app/main/default/objects/Product2/fields/SAP_Sync__c.field-meta.xml
<CustomField>
    <fullName>SAP_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Product synced from SAP.</description>
    <label>SAP Sync</label>
    <type>Checkbox</type>
</CustomField>