force-app/main/default/objects/Product2/fields/Set_Override_Next_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Set_Override_Next_Billing_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set the override next billing date field based on the End Date automatically If true  [IOM-1458]</description>
    <label>Set Override Next Billing Date</label>
    <type>Checkbox</type>
</CustomField>