force-app/main/default/objects/Product2/fields/Source_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Source_Product_Code__c</fullName>
    <description>The code form Source CRM</description>
    <label>Source Product Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>