force-app/main/default/objects/Product2/fields/Standard_Unit__c.field-meta.xml
<CustomField>
    <fullName>Standard_Unit__c</fullName>
    <description>Unit of Measure either &quot;each&quot;, M2 (sq meter) or F2 (sq feet)</description>
    <inlineHelpText>Unit of Measure either &quot;each&quot;, M2 (sq meter) or F2 (sq feet)</inlineHelpText>
    <label>Standard Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M2</fullName>
            </value>
            <value>
                <fullName>F2</fullName>
            </value>
            <value>
                <fullName>FT</fullName>
            </value>
            <value>
                <fullName>MT</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
                <default>true</default>
                <label>EA</label>
            </value>
            <value>
                <fullName>KVA</fullName>
            </value>
            <value>
                <fullName>PCM</fullName>
            </value>
            <value>
                <fullName>FT2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>