force-app/main/default/objects/Product2/fields/Tax_Category__c.field-meta.xml
<CustomField>
    <fullName>Tax_Category__c</fullName>
    <description>Unique reference for OneSource to describe Revenue Type for Tax Determination</description>
    <label>Tax Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>