force-app/main/default/objects/Product2/fields/Tax_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This product will not be tax by tax rules. SAP will return 0 tax on them.</description>
    <inlineHelpText>This product will not be tax by tax rules. SAP will return 0 tax on them.</inlineHelpText>
    <label>Tax Exempt</label>
    <type>Checkbox</type>
</CustomField>