force-app/main/default/objects/Product2/fields/Translated_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Translated_Product_Description__c</fullName>
    <description>Translated Product Description</description>
    <label>Translated Product Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>