force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Source_Product_Code__c</columns>
    <columns>IM_ProductCode__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>GL_Code__c</columns>
    <columns>SBQQ__SubscriptionTerm__c</columns>
    <columns>Tax_Item_Category__c</columns>
    <columns>SBQQ__BillingFrequency__c</columns>
    <columns>SBQQ__BillingType__c</columns>
    <columns>SBQQ__ChargeType__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.QTY_UNIT_OF_MEASURE</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>