force-app/main/default/objects/Product2/listViews/Black_Hat.listView-meta.xml
<ListView>
    <fullName>Black_Hat</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>IM_ProductCode__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Event_Product_Type__c</columns>
    <columns>SBQQ__SubscriptionTerm__c</columns>
    <columns>SBQQ__SubscriptionType__c</columns>
    <columns>SBQQ__BillingFrequency__c</columns>
    <columns>SBQQ__BillingType__c</columns>
    <columns>SBQQ__ChargeType__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>Set_Override_Next_Billing_Date__c</columns>
    <columns>PRODUCT2.QTY_UNIT_OF_MEASURE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>startsWith</operation>
        <value>GE23GHE</value>
    </filters>
    <label>Black Hat</label>
</ListView>